# Skyscrapers-Game-Logic

./: CMakeLists.txt
.devcontainer/: Dockerfile
include/: hw1.h
src/: hw1.c  hw1.h  hw1_game.c  hw1_solver.c
tests/: unit_tests.cpp
